<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Map">

    <fragment
        android:id="@+id/nav_Map"
        android:name="com.csci448.cmak_a3.ui.Map.MapFragment"
        android:label="@string/map_label"
        tools:layout="@layout/fragment_map">

    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.csci448.cmak_a3.ui.About.AboutFragment"
        android:label="@string/about_label"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.csci448.cmak_a3.ui.History.HistoryFragment"
        android:label="@string/history_label"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.csci448.cmak_a3.ui.Settings.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings" />
</navigation>